// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`StepIndicator > should limit active index to max number of steps 1`] = `
<DocumentFragment>
  <div
    class="flex flex-col"
  >
    <span
      class="css-tgbw37"
    >
      3
    </span>
    <ul
      class="css-xa5o6q"
    >
      <li
        class="css-11vjikd"
      />
      <li
        class="css-11vjikd"
      />
      <li
        class="css-11vjikd"
      />
    </ul>
  </div>
</DocumentFragment>
`;

exports[`StepIndicator > should not render with an empty steps array 1`] = `<DocumentFragment />`;

exports[`StepIndicator > should render 1`] = `
<DocumentFragment>
  <div
    class="flex flex-col"
  >
    <span
      class="css-tgbw37"
    >
      1
    </span>
    <ul
      class="css-xa5o6q"
    >
      <li
        class="css-11vjikd"
      />
      <li
        class="css-1ckw8yn"
      />
      <li
        class="css-1ckw8yn"
      />
    </ul>
  </div>
</DocumentFragment>
`;

exports[`StepIndicator > should render witth active index defined 1`] = `
<DocumentFragment>
  <div
    class="flex flex-col"
  >
    <span
      class="css-tgbw37"
    >
      2
    </span>
    <ul
      class="css-xa5o6q"
    >
      <li
        class="css-11vjikd"
      />
      <li
        class="css-11vjikd"
      />
      <li
        class="css-1ckw8yn"
      />
    </ul>
  </div>
</DocumentFragment>
`;
